Pos pos_dataset for CNN

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ __pycache__/
 poetry.lock
 pyproject.toml
 data/neg_fits/*
+
+alma-classifier/alma_classifier/image_processing/temp/*
+data/fits/neg/
